--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Jaco - Japanese Character Optimizer for JavaScript</title>
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" />
+	<link rel="stylesheet" href="css/style.css">
 </head>
 <body role="application">
 
-	<main>apps</main>
+	<main>アプリケーション起動中...</main>
 
 	<script src="js/app.js"></script>
 </body>
